--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!-- begins nav -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="./img/logo.png" alt="logo del sitio"></a>
+        <a class="navbar-brand" href="index.html"><img src="./img/logo.webp" alt="logo del sitio"></a>
         <button class="navbar-toggler" id="icon-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="icon-color"></span>
@@ -52,22 +52,22 @@
         <section class="main__section">
             <article class="main__card">
                 <h2>Pronostico Actual</h2>
-                <img class="card__img" src="img/pronostico_actual.png" alt="En la imagen se puede ver el pronostico actual de la region">
+                <img class="card__img" src="img/pronostico_actual.webp" alt="En la imagen se puede ver el pronostico actual de la region">
                 <p class="card__parr">Este es el clima pronostico actual en tu zona.</p>
             </article>
             <article class="main__card">
                 <h2>Pronostico de mañana</h2>
-                <img class="card__img" src="img/pronostico_de_manana.png" alt="En la imagen se puede ver el pronostico del dia siguiente">
+                <img class="card__img" src="img/pronostico_de_manana.webp" alt="En la imagen se puede ver el pronostico del dia siguiente">
                 <p class="card__parr">Asi va a estar el pronostico mañana en tu zona.</p>
             </article>
             <article class="main__card">
                 <h2>Rios</h2>
-                <img class="card__img" src="img/rios.png" alt="En la imagen se puede ver una imagen del estado actual de los rios">
+                <img class="card__img" src="img/rios.webp" alt="En la imagen se puede ver una imagen del estado actual de los rios">
                 <p class="card__parr">Estas viendo la altura de los rios, crecidas y bajadas.</p>
             </article>
             <article class="main__cardxl">
                 <h2>Alertas activas</h2>
-                <img class="card__img" src="img/ultimas_noticias_del_clima.png" alt="En la imagen se puede ver una noticia relevante del clima a nivel mundial">
+                <img class="card__img" src="img/ultimas_noticias_del_clima.webp" alt="En la imagen se puede ver una noticia relevante del clima a nivel mundial">
                 <p class="card__parr"><b>ATENCION MEXICO:</b> El huracán Bonnie se intensifica a categoría 3 frente a costas de México y el Pacífico.</p>
                 <a href="/sections/alertas.html">Mas info -> </a>
             </article>
