--- a/sections/alertas.html
+++ b/sections/alertas.html
@@ -15,7 +15,7 @@
 <!-- begin nav -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"><img src="../img/logo.png" alt="logo del sitio"></a>
+        <a class="navbar-brand" href="/index.html"><img src="../img/logo.webp" alt="logo del sitio"></a>
         <button class="navbar-toggler" id="icon-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="icon-color"></span>
@@ -53,7 +53,7 @@
             <article class="main__article">
                 <h2 class="h__alert">Alerta activa</h2>
                 <p class="alerta__parr"> <b>A pesar de estar alejándose del territorio mexicano, Bonnie se continúa intensificando y provocará intensas lluvias en varias entidades.</b></p>
-                <img class="img__info" src="../img/alerta.png" alt="En la imagen se muestra la alerta activa de la zona configurada">
+                <img class="img__info" src="../img/alerta.webp" alt="En la imagen se muestra la alerta activa de la zona configurada">
                 <p class="alerta__parr">El Servicio Meteorológico Nacional ha informado que <b>Bonnie se ha intensificado a huracán categoría 3</b> en la escala Saffir-Simpson, frente a las costa mexicanas del Oceáno Pacífico. El ciclón se ubica a 350 km al sur-suroeste de Punta San Telmo, en Michoacán y a 400 km al suroeste de Zihuatanejo, en Guerrero, con vientos sostenidos de 185 km por hora y rachas de hasta 220 km por hora. Provocará intensas lluvias en entidades como Jalisco, Colima, Michoacán, Guerrero y Oaxaca.</p>
                 <p class="alerta__parr">Bonnie mantiene una trayectoria hacia el nor-noroeste (280°) a una velocidad aproximada de 22 km por hora, es decir, se aleja de forma gradual del territorio nacional. Sin embargo, se estima que su presencia genere precipitaciones en el occidente, centro y sur del país. Ante el incremento de cuerpos de agua como ríos y arroyos, así como el aumento en el riesgo de deslaves e inundaciones, las autoridades piden extremar precauciones a la población que habite las entidades antes mencionadas y atender las indicaciones emitidas por el Sistema Nacional de Protección Civil.</p>
             </article>
@@ -65,7 +65,7 @@
             </article>
             <article class="main__article">
                 <h2>Mapa de alerta</h2>
-                <img class="main__img" src="../img/mapa_alerta.png" alt="En la imagen se muestra en el mapa la alerta activa de la zona">
+                <img class="main__img" src="../img/mapa_alerta.webp" alt="En la imagen se muestra en el mapa la alerta activa de la zona">
                 <p class="alerta__parr">El nuevo sistema de alerta no solo implica un cambio en la elaboración de los alertas, sino que también modifica la forma en la que los comunicamos. Su mayor diferencia se encuentra en que este nuevo sistema es más visual, lo que resulta ventajoso al momento de identificar rápidamente una amenaza. Pero también conlleva el desafío de comunicarlo oralmente, por ejemplo, en una entrevista telefónica. Por eso, debemos comprender a fondo esta herramienta para ser capaces de transmitir a la población un mensaje de calidad y oportuno.</p>
                 <p class="alerta__parr">Este documento pretende constituirse en un material de referencia para las personas que diariamente o de manera eventual comunican la información meteorológica a los diversos tipos de usuarios. Todo aquel que se encuentre en la situación de informar sobre un alerta, un aviso a corto plazo o una advertencia debe haber leído este manual y ajustarse a lo que en él se define.</p>
                 <p class="alerta__parr">De esta forma, buscamos asegurar un alto nivel de calidad de las comunicaciones institucionales, con información unificada y consolidada en el organismo.</p>
