--- a/sections/pronostico_extendido.html
+++ b/sections/pronostico_extendido.html
@@ -15,7 +15,7 @@
 <!-- begin nav -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"><img src="../img/logo.png" alt="logo del sitio"></a>
+        <a class="navbar-brand" href="/index.html"><img src="../img/logo.webp" alt="logo del sitio"></a>
         <button class="navbar-toggler" id="icon-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="icon-color"></span>
@@ -52,17 +52,17 @@
         <section class="main__section">
             <article class="main__card">
                 <h2>Pronostico para mañana</h2>
-                <img class="card__img" src="../img/pronostico_de_manana.png" alt="En la imagen se muestra el pronostico de manana">
+                <img class="card__img" src="../img/pronostico_de_manana.webp" alt="En la imagen se muestra el pronostico de manana">
                 <p class="card__parr">El pronostico para mañana en detalle.</p>
             </article>
             <article class="main__card">
                 <h2>Pronostico para pasado mañana</h2>
-                <img class="card__img" src="../img/pronostico_para_pasado_manana.png" alt="En la imagen se muestra el pronostico para la semana">
+                <img class="card__img" src="../img/pronostico_para_pasado_manana.webp" alt="En la imagen se muestra el pronostico para la semana">
                 <p class="card__parr">El pronostico en tu zona para pasado mañana al detalle.</p>
             </article>
             <article class="main__card">
                 <h2>Pronostico para la semana</h2>
-                <img class="card__img" src="../img/pronostico_para_la_semana.png" alt="En la imagen se muestra el pronostico para la semana">
+                <img class="card__img" src="../img/pronostico_para_la_semana.webp" alt="En la imagen se muestra el pronostico para la semana">
                 <p class="card__parr">Si necesitas saber como va a estar el pronostico el resto de la semana, lo vas a poder ver al detalle.</p>
             </article>
             <article class="main__article">
