--- a/sections/rios.html
+++ b/sections/rios.html
@@ -15,7 +15,7 @@
 <!-- begin nav -->
 <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"><img src="../img/logo.png" alt="logo del sitio"></a>
+        <a class="navbar-brand" href="/index.html"><img src="../img/logo.webp" alt="logo del sitio"></a>
         <button class="navbar-toggler" id="icon-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon" id="icon-color"></span>
@@ -55,17 +55,17 @@
             Por ello a continuación, se detallan las alturas de los ríos según las zonas. Tambien se podrá mantener actualizado gracias al servico de imágenes por radar y satélite.</p>
             <article class="main__card">
                 <h2>Altura de los rios</h2>
-                <img class="card__img" src="../img/rios.png" alt="En la imagen se muestra la altura de los rios">
+                <img class="card__img" src="../img/rios.webp" alt="En la imagen se muestra la altura de los rios">
                 <p class="card__parr">Los ríos constituyen una parte importante de nuestro ecosistema, pero debemos estar atentos a cualquier cambio en sus alturas. Acá vas a encontrar esta información al detalle.</p>
             </article>
             <article id="art-3" class="main__card">
                 <h3>Imagenes por radar</h3>
-                <img class="card__img" src="../img/imagen_radar_rios.png" alt="En la imagen se muestra por radar, el estado de los rios">
+                <img class="card__img" src="../img/imagen_radar_rios.webp" alt="En la imagen se muestra por radar, el estado de los rios">
                 <p class="card__parr">Utilizando la tecnolgía por radar podemos detectar anomalías en las zonas de los ríos mas cercanas a las costas y río adentro. Previniendo así sudestadas.</p>
             </article>
             <article class="main__card">
                 <h3>Imagenes por satelite</h3>
-                <img class="card__img" src="../img/imagen_satelite_rios.png" alt="En la imagen se muestra el estado de los rios por satelite">
+                <img class="card__img" src="../img/imagen_satelite_rios.webp" alt="En la imagen se muestra el estado de los rios por satelite">
                 <p class="card__parr">Gracias a los satélites dispuestos y la información procesada, podemos apreciar corrientes cambiantes. Diferencias de temperaturas. Entre otra información.</p>
             </article>
         </section>
